several changes: added yaml configurations for kubernetes cluster, and changed dockerfiles to use start rather than watch

--- a/services/posts/package.json
+++ b/services/posts/package.json
@@ -16,6 +16,7 @@
     "eslint-plugin-import": "^2.22.0"
   },
   "scripts": {
-    "watch": "nodemon index.js"
+    "watch": "nodemon index.js",
+    "start": "node index.js"
   }
 }
