--- a/services/queries/package.json
+++ b/services/queries/package.json
@@ -12,6 +12,7 @@
     "nodemon": "^2.0.4"
   },
   "scripts": {
-    "watch": "nodemon index.js"
+    "watch": "nodemon index.js",
+    "start": "node index.js"
   }
 }
