--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^6.6.0",
+    "lodash-core": "^4.17.19",
     "react": "^16.13.1"
   }
 }
