--- a/services/posts/package.json
+++ b/services/posts/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "lodash-core": "^4.17.19",
     "nodemon": "^2.0.4"
   },
   "devDependencies": {
